Fix post attachements list overflowing (Rebuild CSS files from Sass)(Fixes #42)

--- a/css/index.css
+++ b/css/index.css
@@ -9589,6 +9589,7 @@ dl.stats.half_content, dl.options.half_content {
 .attachments {
   display: flex;
   align-items: flex-end;
+  flex-wrap: wrap;
 }
 .attachments .attached {
   margin-inline-start: 4px;
